tests/common/snapshots/jpeg__common__tests__jpeg.rs-12-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: 89022
  success: true
  extractor: jpeg_built_in
  do_not_recurse: true
  output_directory: "[output_directory]"
- size: 14573
  success: true
  extractor: jpeg_built_in
  do_not_recurse: true
  output_directory: "[output_directory]"
