tests/common/snapshots/jpeg__common__tests__jpeg.rs-27-5_ordered_extractions.snap
---
source: tests/common/mod.rs
assertion_line: 77
expression: ordered_extractions
---
- size: 313
  success: true
  extractor: jpeg_built_in
  do_not_recurse: true
  output_directory: "[output_directory]"
- size: 313
  success: true
  extractor: jpeg_built_in
  do_not_recurse: true
  output_directory: "[output_directory]"
